# union-plugin-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: gothic-api.cmake  union-api.cmake
plugin/: CMakeLists.txt
plugin/src/: Plugin.cpp  Plugin.hpp
